# polaris

./: .prettierrc  README.md  Taskfile.yml  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml  release.yaml
src/: App.svelte  main.ts  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: action.rs  command.rs  external.rs  main.rs
src-tauri/src/action/: get_all_usergroup_list.rs  get_all_users_list.rs  get_current_user.rs  get_emoji_list.rs  search_messages.rs
src-tauri/src/command/: get_current_user.rs  search_messages.rs
src-tauri/src/domain/: entity.rs
src/assets/: app.css
src/components/atoms/: Emoji.svelte  UserImage.svelte
src/components/elements/: Broadcast.svelte  Channel.svelte  Emoji.svelte  Link.svelte  RichTextList.svelte  RichTextPreformatted.svelte  RichTextQuote.svelte  RichTextSection.svelte  Text.svelte  UserGroupMention.svelte  UserMention.svelte
src/components/molecules/: MessageAttachment.svelte  MessageCard.svelte  MessageElement.svelte  MessageHeader.svelte
src/components/organism/: ByNameMentionedSearch.svelte  EgoSearch.svelte  EgoSearchContent.svelte  FreeSearch.svelte
src/model/: EgoSearch.ts  config.ts  fetch-all-usergroups.ts  fetch-all-users.ts  fetch-config.ts  fetch-emoji-list.ts  get-current-user.ts  search-messages.ts
src/utils/: time.ts
